compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundNotNull.kt
// !DIAGNOSTICS: -MUST_BE_INITIALIZED
fun <T: <!CYCLIC_GENERIC_UPPER_BOUND!>T<!>> foo() {}
val <T: <!CYCLIC_GENERIC_UPPER_BOUND!>T?<!>> prop: T
